<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <GVL Name="CYL_CmdState" Id="{17afa519-a259-4498-b65d-67bf034088f6}">
    <Declaration><![CDATA[VAR_GLOBAL CONSTANT
	///ctrl commands definitions
	///specific commands >200 - every command has to be a even number
	cCMD_RETRACT: INT := 202;
	cCMD_EXTEND: INT := 204;
	///ctrl specific states definitions
	cSTA_RETRACTBusy: INT := 201;
	cSTA_RETRACT: INT := CYL_CmdState.cCMD_RETRACT;
	cSTA_EXTENDBusy: INT := 203;
	cSTA_EXTEND: INT := CYL_CmdState.cCMD_EXTEND;
END_VAR]]></Declaration>
    <ObjectProperties />
  </GVL>
</TcPlcObject>