<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="E_ALM_CYL" Id="{9e6591d0-3789-4b33-96b3-a373de2a1210}">
    <Declaration><![CDATA[{attribute 'qualified_only' := ''}
TYPE E_ALM_CYL :
(
	SensorRetractAlwaysOn	:= 1,
	SensorExtendNotReached	:= 2,
	SensorExtendAlwaysOn	:= 3,
	SensorRetractNotReached	:= 4,
	InterlockExtend	:= 5,
	InterlockRetract := 6,	
	MAX_E_ALM
) UINT;
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>