<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="E_Typ_CYL" Id="{9fb2260f-9e09-4ca5-9570-63b9cda9cd4b}">
    <Declaration><![CDATA[TYPE E_Typ_CYL :
(
	///bistabile and two feedback sensors
	Valve2_Sensor2 := 0,
	///bistabile and extended feedback sensors	
	Valve2_SensorExtended,
	///bistabile and retracted feedback sensors	
	Valve2_SensorRetracted,
	///bistabile and no feedback sensors
	Valve2_Sensor0,
	///monostabile and 2 feedback sensors	
	Valve1_Sensor2,
	///monostabile and extended feedback sensors	
	Valve1_SensorExtended,
	///monostabile and retracted feedback sensor
	Valve1_SensorRetracted,
	///monostabile and no feedback sensors
	Valve1_Sensor0,
	Max_E_Typ_CYL
);
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>